Ensure sidenav header visibility in narrow view

--- a/src/_sass/base/_base.scss
+++ b/src/_sass/base/_base.scss
@@ -27,6 +27,10 @@ body {
   flex-grow: 1;
   align-items: flex-start;
   justify-content: space-between;
+
+  &.no-toc {
+    --site-subheader-height: 0;
+  }
 }
 
 h2 {
